# sofus

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile.in  FnmConfig.cmake.in  FnmConfigVersion.cmake.in  FnmMath_8hpp.html  FnmSIMD_8hpp.html  README.md  SofusConfigVersion.cmake.in  VersionInfo__Fnm_8h.html  annotated.html  bessel__lut_8hpp.html  bessel__lut_8hpp__incl.md5  build-deps.sh  build_anaconda_2019.bat  build_win2017.bat  build_win2019.bat  build_win2019_debug.bat  build_win2022.bat  classSwigDirector__ProgressBarInterface-members.html  classSwigDirector__ProgressBarInterface.html  classes.html  classfnm_1_1Aperture-members.html  classfnm_1_1Aperture.html  common.h  config.h  config_8h.html  config_8h__dep__incl.map  config_8h__dep__incl.md5  contributors.txt  dir_000000_000002.html  dir_000001_000003.html  dir_000001_000004.html  dir_000003_000001.html  dir_000003_000004.html  dir_000004_000005.html  dir_4f82593ba38ca1fbeb8ab57a5195b1e7.html  dir_4f82593ba38ca1fbeb8ab57a5195b1e7_dep.dot  (+291 more)
cmake/: DoxygenTarget.cmake  DumpVariables.cmake  FindFFTW.cmake  GenerateProductVersion.cmake  SetInstallDir.cmake  SetWarningLevels.cmake  UseParentScope.cmake  cmake_uninstall.cmake.in  gmock.cmake  gtest.cmake  nanomsg.cmake  simd.cmake  timestamp.cmake
d0/d02/: classfnm_1_1Identity.html
d0/d0d/: structSOFUS__ExcitationTypeNS-members.html
d0/d16/: structsps_1_1element__rect__t-members.html
d0/d28/: fnm__alias_8hpp__dep__incl.dot  fnm__alias_8hpp__dep__incl.map  fnm__alias_8hpp__dep__incl.md5
d0/d2c/: sofus__calc_8hpp.html
d0/d54/: fnm_8hpp.html
d0/d59/: classsps_1_1win32_1_1unique__aligned__multi__array.html
d0/d6a/: memory__incl.dot  memory__incl.map  memory__incl.md5
doc/: article.dox  build.dox  doxygen_html_style.css  doxygen_sqlite3.db  fnm.bib  fnm.dox  fnm.tex  fnm_bulk  gauss.tex  math.dox  python.dox  python.py  release_notes.dox  single_page.dox
docs/: FnmMath_8hpp.html  FnmMath_8hpp__incl.map  FnmMath_8hpp__incl.md5  FnmSIMD_8hpp__incl.map  FnmSIMD_8hpp__incl.md5  VersionInfo__Fnm_8h.html  annotated.html  bessel__lut_8hpp__incl.map  classSwigDirector__ProgressBarInterface-members.html  classSwigDirector__ProgressBarInterface__inherit__graph.map  classSwigDirector__ProgressBarInterface__inherit__graph.md5  classes.html  dir_cd41f1afc10ad4605c1fed3e638b0021_dep.md5  dir_cfce9dac0691c6553fd4b07cff0c723e.html  dir_cfce9dac0691c6553fd4b07cff0c723e_dep.map  dir_ffe10d808f3b8401de5bc52b90a9fa35.html  dir_ffe10d808f3b8401de5bc52b90a9fa35_dep.map  fnm_8hpp.html  fnm_8hpp__dep__incl.map  fnm_8hpp__incl.map  fnm_8hpp__incl.md5  fnm__calc_8hpp.html  fnm__calc_8hpp__incl.map  fnm__calc_8hpp__incl.md5  fnm__data_8hpp.html  fnm__data_8hpp__dep__incl.map  fnm__data_8hpp__incl.map  fnm__data_8hpp__incl.md5  fnm__export_8h.html  fnm__export_8h__dep__incl.map  fnm__export_8h__dep__incl.md5  fnm__types_8hpp__dep__incl.map  fnm__types_8hpp__incl.map  formula.repository  functions.html  functions_enum.html  functions_eval.html  functions_func.html  gl_8hpp.html  gl_8hpp__incl.map  (+47 more)
examples/: README.md  addpaths.py  convex_focused_pw.py  convex_pw.py  fnm_cw_single.py  linear_pw.py  rect_transient.py
fnm/: CMakeLists.txt  FnmMath.hpp  FnmSIMD.hpp  README.md  addpaths.py  asa.py  asa_example.py  asa_test.py  block_match.py  bum.py  circular.cpp  circular.hpp  circular_calc.cpp  circular_calc.hpp  circular_data.cpp  circular_data.hpp  config.h.in  dicts.py  euler.py  example.c  factory.i  fastgl.cpp  fastgl.hpp  fastgl.html  fastgl_prb.cpp  fnm.cpp  fnm.dox  fnm.doxx  fnm.hpp  fnm.i  fnm.py  fnm_alias.hpp  fnm_arrays.cpp  fnm_arrays.hpp  fnm_arrays.py  fnm_basis.cpp  fnm_basis.hpp  fnm_calc.cpp  fnm_calc.hpp  fnm_common.cpp  (+53 more)
gl/: CMakeLists.txt  bessel_lut.cpp  bessel_lut.hpp  bessel_lut.m  config.h.in  fastgl.cpp  fastgl.hpp  gl.cpp  gl.hpp  gl_lut.cpp  gl_lut.hpp  gl_lut.m  gl_test.cpp  lg_gen.nb
matlab/: fnmM.m  singlefocusrectarray.m
python/: CMakeLists.txt  MultiElement.py  MultiElementFocused.py  README.md  SingleElement.m  SingleElement.py  addpaths.py  cw_acoustics.py  fastgl.py  fhfields.py  fhfields_test.py  fnm_attr_test.py  fnm_cw_test.py  fnm_double_cw.py  fnm_double_test.py  fnm_four_test.py  fnm_reference_test.py  fnm_simd_test.py  fnm_sym_test.py  fnm_test.py  fnm_transient_tests.py  fnm_tsd.py  focus_test_singlefocusrectarray.py  focus_test_transientcirc.py  focus_test_transientrect.py  focus_test_tsdrect.py  focus_test_tsdrectarray.py  focus_tests_tsdcirc.py  lgtest.py  parula.py  pyutils.py
python/gui/: addpaths.py  design.ui  field.py  sofus.py  transducer.py
python/reference/: __init__.py  pulse.py  rect.py  spectral.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  defines_0.js  defines_1.js  defines_2.js  (+109 more)
sofus/: CMakeLists.txt  config.h.in  rect_int_limits.hpp  sofus_calc.cpp  sofus_calc.hpp  sofus_pulses.cpp  sofus_pulses.hpp  sofus_types.h  sofus_types.hpp  sofus_version.cpp  sofus_version.hpp
sps/: CMakeLists.txt  algorithm  aligned_allocator.hpp  aligned_array.hpp  cenv.h  cerr.h  cmath  config.h.in  cstdio  cstdlib  debug.h  extintrin.h  extintrin_test.cpp  globals.hpp  indexed_nodes.hpp  indexed_types.hpp  indexed_types_custom.hpp  indexed_types_test.cpp  malloc.h  math.h  memory  memory_test.cpp  mm_malloc.h  multi_malloc.h  multi_malloc.hpp  profiler.h  progress.cpp  progress.hpp  progress_if.hpp  queue.hpp  signal.h  signals.cpp  signals.hpp  smath.cpp  smath.hpp  smath_test.cpp  smath_types.cpp  smath_types.hpp  sps_mqueue.cpp  sps_mqueue.hpp  (+10 more)
sps/cmake/: CompareVersionStrings.cmake  gtest_macros.cmake  simd.cmake  utils.cmake
sps/unix/: memory
sps/win32/: memory
test/: CMakeLists.txt  ctest.c  main.cpp
(+933 files in other folders)
